# eventpp

./: .gitignore  CMakeLists.txt  readme.md
.github/workflows/: main.yml
cmake/: eventppConfig.cmake.in
doc/: anydata.md  anyhashable.md  anyid.md  argumentadapter.md  benchmark.md  callbacklist.md  conditionalfunctor.md  conditionalremover.md  counterremover.md  eventdispatcher.md  eventmaker.md  eventqueue.md  eventutil.md  faq.md  hetercallbacklist.md  hetereventdispatcher.md  hetereventqueue.md  heterogeneous.md  install.md  introduction.md  mixins.md  orderedqueuelist.md  policies.md  scopedremover.md  tutorial_callbacklist.md  tutorial_eventdispatcher.md  tutorial_eventqueue.md
doc/cn/: callbacklist.md  eventqueue.md  readme.md  tutorial_callbacklist.md  tutorial_eventdispatcher.md  tutorial_eventqueue.md
include/eventpp/: callbacklist.h  eventdispatcher.h  eventpolicies.h  eventqueue.h  hetercallbacklist.h  hetereventdispatcher.h  hetereventqueue.h  typeutil.h
include/eventpp/interceptors/: interceptorfilter.h
include/eventpp/internal/: eventpolicies_i.h  eventqueue_i.h  hetercallbacklist_i.h  hetereventdispatcher_i.h  typeutil_i.h
include/eventpp/mixins/: mixinfilter.h  mixinheterfilter.h
include/eventpp/utilities/: anydata.h  anyhashable.h  anyhashablevalue.h  anyid.h  argumentadapter.h  conditionalfunctor.h  conditionalremover.h  counterremover.h  eventmaker.h  eventutil.h  orderedqueuelist.h  scopedremover.h
tests/: CMakeLists.txt  benchmark.cpp  test.h  test_callbacklist.cpp  test_callbacklist_basic.cpp  test_conditionalremover.cpp  test_dispatch.cpp  test_dispatcher_basic.cpp  test_queue.cpp  test_queue_basic.cpp  test_scopedremover.cpp  tutorial_callbacklist.cpp  tutorial_eventdispatcher.cpp  tutorial_eventqueue.cpp
tests/benchmark/: CMakeLists.txt  b3_b5_eventqueue.cpp  b7_callbacklist_vs_function_list.cpp  b8_eventqueue_anydata.cpp
tests/cmake-pkg-demo/: readme.md
tests/tutorial/: CMakeLists.txt  tutorial_anydata.cpp  tutorial_argumentadapter.cpp  tutorial_callbacklist.cpp  tutorial_eventdispatcher.cpp  tutorial_eventqueue.cpp  tutorial_hetercallbacklist.cpp
tests/unittest/: CMakeLists.txt  test.h  test_anydata.cpp  test_anyhashable.cpp  test_anyhashablevalue.cpp  test_anyid.cpp  test_argumentadapter.cpp  test_callbacklist_basic.cpp  test_callbacklist_multithread.cpp  test_conditionalfunctor.cpp  test_conditionalremover.cpp  test_counterremover.cpp  test_dispatcher_basic.cpp  test_dispatcher_ctors.cpp  test_dispatcher_multithread.cpp  test_eventmaker.cpp  test_eventutil.cpp  test_hetercallbacklist_basic.cpp  test_heterdispatcher_basic.cpp  test_heterdispatcher_multithread.cpp  test_heterqueue_basic.cpp  test_no_extra_copy_move.cpp  test_queue_basic.cpp  test_queue_multithread.cpp  test_scopedremover.cpp  tutorial_callbacklist.cpp  tutorial_eventdispatcher.cpp  tutorial_eventqueue.cpp  tutorial_hetercallbacklist.cpp
